@@ -278,6 +278,7 @@ GUI.DIALOG.MOD_CHANGES_OUTSTANDING,You have selected a different set of mods to 
 GUI.DIALOG.MOD_INCOMPATIBLE,One or more mods are incompatible with this version of the game and have been deactivated. You can check for updates in the mods menu.,,Eine oder mehrere Mods sind mit dieser Version des Spiels nicht kompatibel und wurden deaktiviert. Du kannst im Mods-Menü nach Updates suchen.,Un ou plusieurs mods sont incompatibles avec cette version du jeu et ont été désactivés. Vous pouvez vérifier les mises à jour dans le menu mods.,Una o più mod sono incompatibili con questa versione del gioco e sono state disattivate. Puoi controllare gli aggiornamenti nel menu mod.,Uno o varios mods son incompatibles con esta versión del juego y han sido desactivados. Puede buscar actualizaciones en el menú de mods.,Um ou mais mods são incompatíveis com esta versão do jogo e foram desativados. Você pode verificar se há atualizações no menu mods.,,,Один или несколько модов несовместимы с данной версией игры и были деактивированы. Проверить наличие обновлений можно в меню модов.,En eller flere mods er uforenelige med denne version af spillet og er blevet deaktiveret. Du kan søge efter opdateringer i modsmenuen.,,En eller flera mods är inkompatibla med den här versionen av spelet och har avaktiverats. Du kan söka efter uppdateringar i mods-menyn.,,,,このバージョンと互換性の無いため、無効になっているmodがあります。 更新はmodメニューで確認することができます。,一个或多个 MODS 与这个版本的游戏不兼容，并已停用. 您可以在 MODS 菜单中检查更新。,하나 이상의 개조 게임이 버전과 호환되지 않는 및 비활성화되었습니다. 모드 메뉴에서 업데이트를 확인할 수 있습니다.
 GUI.DIALOG.OK_BUTTON,OK,,OK,OK,Ok,Ok,Ok,Ok,,OK,OK,,OKEJ,,,,OK,好,확인
 GUI.DIALOG.RENAME_ROOM_TITLE,Rename room,,Raum umbenennen,Renommer la salle,Rinomina stanza,Cambiar nombre de habitación,Renomear sala,,,Переименовать комнату,Omdøb værelse,,Byt namn på rum,,,,部屋の名前を変更する,重命名房间,룸 이름 바꾸기
+GUI.DIALOG.RENAME_SETTLER_TITLE,Rename settler,,,,,,,,,,,,,,,,,,
 GUI.DIALOG.RESTART_REQUIRED,You must restart the game for this change to take effect,,"Damit diese Änderung wirksam wird, muss das Spiel neugestart werden.",Vous devez redémarrer le jeu pour que cette modification prenne effet,È necessario riavviare il gioco affinché questa modifica abbia effetto,Debe reiniciar el juego para que este cambio surta efecto,Você deve reiniciar o jogo para que essa alteração entre em vigor,,,"Вы должны перезапустить игру, чтобы это изменение вступило в силу",Du skal genstarte spillet for at denne ændring kan træde i kraft,,Du måste starta om spelet för att ändringen ska träda i kraft,,,,変更を有効にするには、ゲームを再起動する必要があります。,您必须重新启动游戏才能使此更改生效,이 변경 사항을 적용하려면 게임을 다시 시작해야 합니다.
 GUI.FURNITURE_ASSIGNED_TO,Assigned to {{name}},,Zugewiesen zu {{name}},Appartient à {{name}},Oggetto assegnato a: {{name}},Asignado a {{name}},Atribuído a {{name}},Atribuição: {{name}},,Принадлежит: {{name}},Tildelt til {{name},,Tilldelas till {{name}},,,,{{name}} に割り当てられました,分配给 {{name}},{{name}} 에 할당됨
 GUI.FURNITURE_BEING_REMOVED,Currently being removed,,Wird gerade entfernt,Retrait en cours,Rimozione in corso,Se está eliminando,Atualmente em remoção,Em remoção,,В процессе удаления,I øjeblikket er ved at blive fjernet,,För närvarande tas bort,,,,現在削除されています,当前正在删除,현재 제거 중입니다.
@@ -299,6 +300,7 @@ GUI.OPTIONS.GAMEPLAY.USE_EDGE_SCROLLING,Scroll when cursor is at the edge of the
 GUI.OPTIONS.GRAPHICS.TITLE,"Graphics Options ",,"Grafikeinstellungen ","Options graphiques ","Opzioni grafiche ","Ajustes de vídeo ","Opções Gráficas ","Opções Gráficas ",,"Настройки графики ",Grafikindstillinger,,"Grafikinställningar ",,,,[グラフィックスオプション],图形选项,그래픽 옵션
 GUI.OPTIONS.MISC.CRASH_REPORTING_ENABLED,Allow automatic crash reports,,Automatische Absturzberichte erlauben,Autoriser les rapports d'incident automatiques,Consenti rapporti di arresto anomalo automatico,Permitir informes de bloqueos automáticos,Permitir relatórios de falhas automáticos,,,Разрешить автоматические отчеты о сбоях,Tillad automatiske nedbrudsrapporter,,Tillåt automatiska kraschrapporter,,,,自動クラッシュレポートを許可する,允许自动崩溃报告,자동 충돌 보고서 허용
 GUI.OPTIONS.MISC.HINTS_ENABLED,Show hints and tutorials in-game,,,,,,,,,,,,,,,,,,
+GUI.OPTIONS.MISC.MAIN_MENU_BACKGROUND_SCROLLING,Scroll the background on the main menu,,,,,,,,,,,,,,,,,,
 GUI.OPTIONS.MISC.TITLE,Miscellaneous,,Verschiedenes,Divers,Varie,Misceláneo,Diversos,,,Разное,Diverse,,Diverse,,,,[その他],杂项,기타
 GUI.ORDERS.CHOP_WOOD,Chop,,Hacken,Couper,Taglia,Talar,Cortar,Cortar,,Рубить,Hak,,Hugga,,,,チョップ,印章,들어온다
 GUI.ORDERS.CLEAR_GROUND,Clear,,Aufräumen,Arracher,Rimuovi,Despejar,Limpar,Limpar,,Расчистить,Klar,,Rensa,,,,クリア,清除,클리어
@@ -315,6 +317,8 @@ GUI.ROTATE_FURNITURE.HINT,Press (R) to rotate furniture,,Zum Rotieren der Möbel
 GUI.SAVING_PROMPT,Saving…,,Spiel wird gespeichert…,Sauvegarde en cours...,Salvataggio...,Guardando…,A guardar…,Salvando…,,Сохранение…,Redder...,,Räddar...,,,,保存中...,保存...,저장하는 중...
 GUI.SETTLER_MANAGEMENT.DEAD_COUNTER,Dead: {{count}},,Tot: {{count}},Mort : {{count}},Morto: {{count}},Muerto: {{count}},Morto: {{count}},,,Мертвый: {{count}},Død: {{count}},,Döda: {{count}},,,,デッド:{{count}},死亡：{{count}},죽은: {{count}}
 GUI.SETTLER_MANAGEMENT.LIVING_COUNTER,Population: {{count}},,Bevölkerung: {{count}},Population : {{count}},Popolazione: {{count}},Población: {{count}},População: {{count}},,,Население: {{count}},Befolkning: {{count},,Befolkning: {{count}},,,,人口：{{count}},人口：{{count}},인구: {{count}}
+GUI.SETTLER_MANAGEMENT.SORT.BY_NAME,Sort by name,,,,,,,,,,,,,,,,,,
+GUI.SETTLER_MANAGEMENT.SORT.BY_UNHAPPINESS,Sort by unhappiness,,,,,,,,,,,,,,,,,,
 GUI.SETTLER_MANAGEMENT.TITLE,Settlers,,Siedler,Les colons,Coloni,Colonos,Colonos,,,Поселенцы,Nybyggere,,Nybyggare,,,,入植者だ,定居者,정착민
 GUI.SETTLER_MANAGEMENT.TOTAL_QUANTITY_LABEL,Total: {{count}},,Gesamt: {{count}},Total : {{count}},Totale: {{count}},Total: {{count}},Total: {{count}},,,Всего: {{count}},I alt: {{count}},,Totalt: {{count}},,,,合計：{{count}},共计：{{count}},합계: {{count}}
 GUI.SOUND_EFFECT_VOLUME,Sound effect volume,,Soundeffektlautstärke,Volume des effets sonores,Volume degli effetti sonori,Volumen de los efectos de sonido,Volume de efeitos sonoros,Volume dos efeitos sonoros,,Громкость эффектов,Lydeffektvolumen,,Ljudeffektvolym,,,,効果音量,音效音量,사운드 효과 볼륨
