@@ -324,6 +324,7 @@ GUI.DIALOG.LANGUAGE_TRANSLATION_INCOMPLETE,,The selected language translation is
 GUI.DIALOG.OK_BUTTON,Single button shown to dismiss an error dialog,OK,OK,Ok,OK,Ok,Ok,Ok,OK,Ok,,,,,
 GUI.DIALOG.RESTART_REQUIRED,,You must restart the game for this change to take effect,,,,,,,,,,,,,
 GUI.DIALOG.RENAME_ROOM_TITLE,,Rename room,,,,,,,,,,,,,
+GUI.DIALOG.RENAME_SETTLER_TITLE,,Rename settler,,,,,,,,,,,,,
 GUI.DIALOG.DISMISS,,Dismiss,,,,,,,,,,,,,
 GUI.DIALOG.JUMP_TO,,Go to location,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,
