@@ -1,5 +1,6 @@
 Alpha 5
 
+- You can now rename settlers!
 - Floors now overlap underneath walls, so the transparency at the edge of wall tiles makes sense rather than showing a grey border
 - Overhauled how floors overlap onto other tiles, requiring far less sprites to be created (similar to walls)
 - Replaced grass floors and floor overlap sprites
